--- a/Calendar Program/Calendar Program.vbproj
+++ b/Calendar Program/Calendar Program.vbproj
@@ -92,6 +92,7 @@
       <HintPath>..\packages\Microsoft.Net.Http.2.2.22\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -115,6 +116,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calendar.vb" />
     <Compile Include="ClassesToAdd.Designer.vb">
       <DependentUpon>ClassesToAdd.vb</DependentUpon>
     </Compile>
